--- a/labextension/vpython/tsconfig.json
+++ b/labextension/vpython/tsconfig.json
@@ -4,10 +4,11 @@
     "lib": ["es6", "ES5", "ES2015.Promise", "DOM"],
     "module": "commonjs",
     "moduleResolution": "node",
-	"noImplicitAny": true,
+    "noImplicitAny": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
-    "outDir": "./lib",
+    "outDir": "lib",
+    "rootDir": "src",
     "target": "es6",
     "strict": true,
     "strictNullChecks": false,
