--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ install:
     - conda config --add channels vpython
     - conda config --append channels conda-forge
 
-    - conda install conda=4.7.10 python=$CONDA_PY
+    - conda install conda python=$CONDA_PY
 
     # Install a couple of dependencies we need for sure.
     # Not sure why cython is necessary since it is listed as a build dependency.
-    - conda install --quiet jinja2 conda-build=3.18.9 anaconda-client cython twine pytest
+    - conda install --quiet jinja2 conda-build anaconda-client cython twine pytest
 
     # make a wheel building environment to ensure correct python version.
     - conda create --quiet -n wheel-build python=$CONDA_PY wheel cython
@@ -67,7 +67,7 @@ script:
     # paying attention to CONDA_PY. See:
     # https://github.com/conda/conda-build/issues/1832
     # - export WHEEL_PACKAGE="$OUTPUT_DIR/*.whl"
-    - source activate wheel-build; python setup.py bdist_wheel; source deactivate
+    - conda activate wheel-build; python setup.py bdist_wheel; conda deactivate
     - export WHEEL_PACKAGE=dist/*.whl
     - echo $CONDA_PACKAGE
     - echo $WHEEL_PACKAGE
