Change format of yaml file to match new copy script

--- a/vp_copy.yaml
+++ b/vp_copy.yaml
@@ -2,4 +2,5 @@
 # version is fine) that should be copied from conda-forge to the vpython
 # channel. This should include all dependencies of vpython that are
 # not in the defaults channel.
-{autobahn: null, six: null, txaio: null}
+- name: autobahn
+- name: txaio
