--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ env:
         - TWINE_USERNAME="mwcraig"
     matrix:
         - CONDA_PY=3.6
-        - CONDA_PY=3.7.3  # 3.7.4 on conda is broken
+        - CONDA_PY=3.7
+        - CONDA_PY=3.8
 
 install:
     # Install and set up miniconda.
