--- a/.github/workflows/copy_conda_packages.yml
+++ b/.github/workflows/copy_conda_packages.yml
@@ -1,8 +1,8 @@
 on:
   schedule:
     # Run once a day at 20:10 UTC
-    # But for now every hour on 30.
-    - cron: '30 * * * *'
+    # But for now every hour on 35.
+    - cron: '35 * * * *'
 
 jobs:
   copy_packages:
@@ -11,12 +11,18 @@ jobs:
 
     - uses: actions/checkout@v1
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - uses: goanpeca/setup-miniconda@v1
       with:
-        python-version: 3.8
+        auto-update-conda: true
+        python-version: 3.7
+
+    - name: Install dependencies
+      shell: bash -l {0}
+      run: |
+        conda install anaconda-client
 
     - name: Perform copy
+      shell: bash -l {0}
       run: |
         git clone git://github.com/glue-viz/conda-sync.git
         mv conda-sync/sync.py .
