--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ var/
 
 !vpython/lib
 
+# Notebook stuff
+.ipynb_checkpoints
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
