--- a/labextension/vpython/package.json
+++ b/labextension/vpython/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vpython",
-  "version": "1.0.0",
-  "description": "VPython extension for Jupyterlab",
+  "version": "2.0.1",
+  "description": "VPython extension for JupyterLab",
   "keywords": [
     "jupyter",
     "jupyterlab",
@@ -20,7 +20,7 @@
     "vpython_libraries/*"
   ],
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "style": "style/index.css",
   "repository": {
     "type": "git",
@@ -28,25 +28,30 @@
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf lib && rimraf tsconfig.tsbuildinfo",
-    "prepare": "npm run clean && npm run build",
+    "clean": "rimraf lib tsconfig.tsbuildinfo",
+    "eslint": "eslint . --ext .ts,.tsx --fix",
+    "eslint:check": "eslint . --ext .ts,.tsx",
+    "prepare": "jlpm run clean && jlpm run build",
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.2.1",
-    "@jupyterlab/apputils": "^1.2.1",
-    "@jupyterlab/coreutils": "^3.2.0",
-    "@jupyterlab/docregistry": "^1.2.1",
-    "@jupyterlab/notebook": "^1.2.2",
-    "@phosphor/disposable": "^1.3.1",
+    "@jupyterlab/application": "^2.1.2",
+    "@jupyterlab/apputils": "^2.1.1",
+    "@jupyterlab/coreutils": "^4.1.0",
+    "@jupyterlab/docregistry": "^2.1.2",
+    "@jupyterlab/notebook": "^2.1.2",
+    "@lumino/disposable": "^1.4.0",
     "script-loader": "^0.7.2"
   },
   "devDependencies": {
-    "file-loader": "^4.2.0",
-    "webpack": "^4.0.0",
-    "@babel/types": "^7.6.1",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "1.16.4",
     "rimraf": "^2.6.1",
-    "typescript": "^3.6.3"
+    "typescript": "~3.7.0"
   },
   "sideEffects": [
     "style/*.css"
