--- a/labextension/vpython/package.json
+++ b/labextension/vpython/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpython",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "VPython extension for JupyterLab",
   "keywords": [
     "jupyter",
@@ -35,12 +35,12 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.1.2",
-    "@jupyterlab/apputils": "^2.1.1",
-    "@jupyterlab/coreutils": "^4.1.0",
-    "@jupyterlab/docregistry": "^2.1.2",
-    "@jupyterlab/notebook": "^2.1.2",
-    "@lumino/disposable": "^1.4.0",
+    "@jupyterlab/application": "3.0.9",
+    "@jupyterlab/apputils": "3.0.7",
+    "@jupyterlab/coreutils": "5.0.5",
+    "@jupyterlab/docregistry": "3.0.9",
+    "@jupyterlab/notebook": "3.0.9",
+    "@lumino/disposable": "^1.5.0",
     "script-loader": "^0.7.2"
   },
   "devDependencies": {
