--- a/labextension/vpython/package.json
+++ b/labextension/vpython/package.json
@@ -1,21 +1,24 @@
 {
   "name": "vpython",
-  "version": "3.0.0",
+  "version": "3.0.3",
   "description": "VPython extension for JupyterLab",
   "keywords": [
     "jupyter",
     "jupyterlab",
     "jupyterlab-extension"
   ],
-  "homepage": "",
+  "homepage": "https://github.com/jcoady/jupyterlab_vpython",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/jcoady/jupyterlab_vpython/issues"
   },
   "license": "BSD-3-Clause",
-  "author": "John Coady",
+  "author": {
+    "name": "John Coady",
+    "email": "johncoady@shaw.ca"
+  },
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf,otf,ico}",
-    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf,otf,ico}",
+    "style/**/*.{css,.js,eot,gif,html,jpg,json,png,svg,woff2,ttf,otf,ico}",
     "vpython_data/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf,otf,ico}",
     "vpython_libraries/*"
   ],
@@ -24,39 +27,53 @@
   "style": "style/index.css",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/jcoady/jupyterlab_vpython.git"
   },
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf lib tsconfig.tsbuildinfo",
+    "build": "jlpm run build:lib && jlpm run build:labextension:dev",
+    "build:prod": "jlpm run clean && jlpm run build:lib && jlpm run build:labextension",
+    "build:labextension": "jupyter labextension build .",
+    "build:labextension:dev": "jupyter labextension build --development True .",
+    "build:lib": "tsc",
+    "clean": "jlpm run clean:lib",
+    "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
+    "clean:labextension": "rimraf jupyterlab_vpython/labextension",
+    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
     "eslint": "eslint . --ext .ts,.tsx --fix",
     "eslint:check": "eslint . --ext .ts,.tsx",
-    "prepare": "jlpm run clean && jlpm run build",
-    "watch": "tsc -w"
+    "install:extension": "jlpm run build",
+    "watch": "run-p watch:src watch:labextension",
+    "watch:src": "tsc -w",
+    "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "3.0.9",
-    "@jupyterlab/apputils": "3.0.7",
-    "@jupyterlab/coreutils": "5.0.5",
-    "@jupyterlab/docregistry": "3.0.9",
-    "@jupyterlab/notebook": "3.0.9",
-    "@lumino/disposable": "^1.5.0",
+    "@jupyterlab/application": "^3.0.9",
+    "@jupyterlab/apputils": "^3.0.7",
+    "@jupyterlab/coreutils": "^5.0.5",
+    "@jupyterlab/docregistry": "^3.0.9",
+    "@jupyterlab/notebook": "^3.0.9",
+    "@lumino/disposable": "^1.6.0",
     "script-loader": "^0.7.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "1.16.4",
-    "rimraf": "^2.6.1",
-    "typescript": "~3.7.0"
+    "@jupyterlab/builder": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.1",
+    "rimraf": "^3.0.2",
+    "typescript": "~4.1.3"
   },
   "sideEffects": [
-    "style/*.css"
+    "style/*.css",
+    "style/index.js"
   ],
+  "styleModule": "style/index.js",
   "jupyterlab": {
-    "extension": true
+    "extension": true,
+    "outputDir": "jupyterlab_vpython/labextension"
   }
 }
