--- a/.github/workflows/upload_pypi.yml
+++ b/.github/workflows/upload_pypi.yml
@@ -64,7 +64,7 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_UPLOAD_TOKEN }}
       run: |
-        twine upload wheelhouse/vpython-*-manylinux*.whl
+        twine upload dist/vpython-*-manylinux*.whl
 
   sdist:
     runs-on: ubuntu-latest
