--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,11 +37,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest Cython wheel
+        pip install pytest Cython wheel build
 
     - name: Build sdist
       run: |
-        python setup.py sdist
+        python -m build
 
     - name: Build wheel
       run: |
