--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,13 +41,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest Cython wheel build
 
-    - name: Build sdist
+    - name: Build sdist and wheel
       run: |
         python -m build
-
-    - name: Build wheel
-      run: |
-        python setup.py bdist_wheel
 
     - name: Install vpython
       run: |
