--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [build-system]
 requires = ["setuptools",
             "wheel",
-            "setuptools_scm"]
+            "setuptools_scm",
+            "cython"]
 build-backend = 'setuptools.build_meta'
 
 [tool.setuptools_scm]
