--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Test/build
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:  # Allows manual triggering
+  push:  # only build on pusheess to the main branch
+    branches:
+      - master
+  pull_request:
 
 jobs:
   build:
@@ -9,8 +14,18 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9, '3.10', 3.11]
+        python-version: [3.11, 3.12]
         platform: [ubuntu-latest, macos-latest, windows-latest]
+        # The include below adds jobs on older versions of python,
+        # but just on one platform. Windows is probably the most widely
+        # used for vpython, so test on that.
+        include:
+          - python-version: "3.8"
+            platform: windows-latest
+          - python-version: "3.9"
+            platform: windows-latest
+          - python-version: "3.10"
+            platform: windows-latest
     runs-on: ${{ matrix.platform }}
 
     steps:
