--- a/.github/workflows/upload_pypi.yml
+++ b/.github/workflows/upload_pypi.yml
@@ -11,7 +11,7 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10', 3.11]
+        python-version: [3.8, 3.9, '3.10', 3.11, 3.12]
         platform: [macos-latest, windows-latest]  # Wheels on linux below
     runs-on: ${{ matrix.platform }}
 
@@ -48,7 +48,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.10
+        python-version: 3.11
     - name: Stable with rustfmt and clippy
       uses: actions-rs/toolchain@v1
       with:
@@ -61,7 +61,7 @@ jobs:
     - name: Python wheels manylinux build
       uses: RalfG/python-wheels-manylinux-build@v0.7.1
       with:
-        python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
+        python-versions: 'cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311 cp312-cp312'
         build-requirements: 'setuptools cython setuptools_scm'
     - name: Build and publish wheel
       env:
@@ -79,7 +79,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.10
+        python-version: 3.11
     - name: Set up QEMU
       id: qemu
       uses: docker/setup-qemu-action@v3
@@ -90,7 +90,7 @@ jobs:
     - name: Python wheels manylinux build
       uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_aarch64
       with:
-        python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310'
+        python-versions: 'cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311 cp312-cp312'
         build-requirements: 'setuptools cython setuptools_scm'
     - name: Build and publish wheel
       env:
@@ -106,7 +106,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: '3.11'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
